# ji-kids-bytes

./: .firebaserc  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  firebase.json  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  webpack.dev.js  webpack.release.js
.firebase/: hosting.ZGlzdA.cache
.github/workflows/: build.yml
_static/: sitemap.xml
_static/webcomponentsjs/: package.json
build-utils/: cors.js  local-media-server.js  media-server-sync.js  transform-css.js
build-utils/manifest-generator/: Cargo.toml
build-utils/manifest-generator/src/: config.rs  loader.rs  main.rs  writer.rs
build-utils/sheets-download/: Cargo.toml
build-utils/sheets-download/mock/: manifest.json
build-utils/sheets-download/src/: config.rs  loader.rs  main.rs
build-utils/sheets-download/src/schema/: schema_app.rs  schema_drive.rs
build-utils/sitemap-creator/: Cargo.toml
build-utils/sitemap-creator/src/: config.rs  loader.rs  main.rs
build-utils/social-meta-tags/: Cargo.toml
build-utils/social-meta-tags/src/: config.rs  main.rs  replacer.rs  social.rs  writer.rs
css/: home.css  player.css
css/home/: donate.css  footer.css  skeleton.css
css/player/: create.css  help.css  links.css  media.css
markup/css/: home.css  player.css
markup/css/home/: footer.css  help.css  partners.css  root.css  signup.css  topics.css
markup/css/player/: buttons.css  create.css  help.css  left-menu.css  links.css  overrides.css  root.css  (+2 more)
markup/templates/: google-analytics.hbs  home.hbs  hubspot-tracking.hbs  player.hbs  sitemap.hbs
public/css/: home.css  player.css
public/js/: home.js  player.js
rust/: Cargo.toml  Makefile.toml
rust/src/: config.rs  enums.rs  events.rs  lib.rs  loader.rs  manifest.rs  router.rs
rust/src/dom/: main.rs  mod.rs  root.rs
rust/src/dom/pages/: home.rs  loading.rs  mod.rs  not_found.rs  topic.rs
src/: cors.rs  main.rs  reject.rs  routes.rs  server.rs  settings.rs  templates.rs
src/data/: manifest.rs  mod.rs  partners.rs
src/pages/: home.rs  mod.rs  player.rs  sitemap.rs
templates/: facebook-pixel.hbs  home.hbs  player.hbs
templates/home/: help.hbs
templates/player/: left-menu.hbs  section-create.hbs  section-help.hbs  section-links.hbs  section-media.hbs  top-header.hbs
typescript/: components.ts  index.html  index.ts  tsconfig.json
typescript/components/: root.ts  router.ts
typescript/events/: events.ts
typescript/settings/: settings.ts
typescript/utils/: jitap.ts  scale.ts  user-agent.ts  wasm.ts
(+75 files in other folders)
