[package]
name = "my_app"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
manifest = { path = "../shared/rust/manifest" }
wasm-bindgen = "0.2.58"
wasm-logger = { version = "0.2.0", optional = true }
dominator = { git= "https://github.com/dakom/rust-dominator.git"}
dominator_helpers = { git= "https://github.com/dakom/dominator-helpers.git"}
gloo-events = "0.1.1"
gloo-timers = "0.2.0"
futures-signals = "0.3.10"
lazy_static = "1.4.0"
matches = "0.1.8"
js-sys = "0.3.35"
cfg-if = "0.1.10"
paste = "0.1.6"
log = "0.4.8"
num-traits = "0.2.10"
num-derive = "0.3.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_repr = "0.1.5"
serde-wasm-bindgen = "0.1.3"
serde_json = "1.0.44"
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen-futures= "0.4.8"
console_error_panic_hook = { version = "0.1.6", optional = true }
awsm_web = { version = "0.1.7", features = ["loaders"]}
web-sys = { version = "0.3.35", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'ShadowRoot',
  'Performance',
  'Storage',
  'CustomEvent',
  'console'
] }

[features]
default = ["wee_alloc"]
ts_test = []
quiet = []
dev = ["wee_alloc", "wasm-logger", "console_error_panic_hook"]
