[package]
name = "sheets-download"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.12"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
url = "2.1.1"
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2.13", features = ["full"] }
serde_repr = "0.1.5"
derivative = "2.0.2"
futures = "0.3.4"
